--- a/com.darkhorsekelly.insert-timestamp.sdPlugin/manifest.json
+++ b/com.darkhorsekelly.insert-timestamp.sdPlugin/manifest.json
@@ -4,11 +4,11 @@
 	"Author": "darkhorsekelly",
 	"Actions": [
 		{
-			"Name": "Counter",
+			"Name": "Insert Timestamp",
 			"UUID": "com.darkhorsekelly.insert-timestamp.increment",
 			"Icon": "imgs/actions/counter/icon",
-			"Tooltip": "Displays a count, which increments by one on press.",
-			"PropertyInspectorPath": "ui/increment-counter.html",
+			"Tooltip": "Inserts the current timestamp as text",
+			"PropertyInspectorPath": "ui/insert-timestamp.html",
 			"Controllers": [
 				"Keypad"
 			],
@@ -23,7 +23,7 @@
 	"Category": "Insert Timestamp",
 	"CategoryIcon": "imgs/plugin/category-icon",
 	"CodePath": "bin/plugin.js",
-	"Description": "insert timestamp as text plugin for Stream Deck",
+	"Description": "Simple utility to insert timestamp for the Stream Deck",
 	"Icon": "imgs/plugin/marketplace",
 	"SDKVersion": 2,
 	"Software": {
